--- a/app/views/player/new.erb
+++ b/app/views/player/new.erb
@@ -1,5 +1,8 @@
+<%= link_to 'Back to all List', '/' %>
+
 <h1>Create a new player</h1>
 <form method="POST" action="/player">
-  <span>Name:</span><input type="text" name="name" />
-  <button type="submit">Create</button>
+  <span>Name: </span>
+  <input type="text" name="name" />
+  <button class="btn" type="submit">Create</button>
 </form>
