Modify view design

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="offset1">
-    <%= yield %>
+
+<div class="span4">
+  <%= yield %>
 </div>
+
 </body>
 </html>
