--- a/app/views/player/index.html.erb
+++ b/app/views/player/index.html.erb
@@ -2,8 +2,7 @@
 <% if @players.size == 0  %>
     <div>There are no players</div>
 <% else %>
-
-    <div class="well span4">
+    <div class="well">
         <%= @players.size %> Players:
         <% @players.each do |p| %>
             <div>
@@ -13,8 +12,10 @@
     </div>
 
     <div class="clearfix"></div>
-    <div class="offset1 navbar">
+
+    <div class="navbar">
       <%= link_to 'Create a new player', '/player/new', :class => "btn" %>
       <!--<span class="btn">New match</span>-->
     </div>
+
 <% end %>
