Show basic statistics for players

--- a/app/views/game/new.erb
+++ b/app/views/game/new.erb
@@ -1,6 +1,6 @@
-<%= link_to 'Back to all List', '/' %>
+<%= link_to 'Back to all List', '/', :class => "nav-header" %>
 
-<h1 xmlns="http://www.w3.org/1999/html">Create a new game</h1>
+<h1>Create a new game</h1>
 <form method="POST" action="/game">
   <div>Local Player: </div>
   <ul class="unstyled">
