--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-<div class="span5">
-  <%= yield %>
+<div class="row">
+  <div class="offset1">
+    <%= yield %>
+  </div>
 </div>
 
 </body>
