--- a/app/views/player/new.erb
+++ b/app/views/player/new.erb
@@ -1,8 +1,9 @@
-<%= link_to 'Back to all List', '/' %>
+<%= link_to 'Back to all List', '/', :class => "nav-header" %>
 
 <h1>Create a new player</h1>
 <form method="POST" action="/player">
-  <span>Name: </span>
-  <input type="text" name="name" />
+  <label>Name:
+    <input type="text" name="name"/>
+  </label>
   <button class="btn" type="submit">Create</button>
 </form>
