Change on views to display on mobile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,8 @@
 </head>
 <body>
 
-<div class="row">
-  <div class="offset1">
+<div class="row-fluid">
     <%= yield %>
-  </div>
 </div>
 
 </body>
