--- a/app/views/game/show.erb
+++ b/app/views/game/show.erb
@@ -6,19 +6,17 @@
     <div><%= link_to 'Back to all List', '/', :class => "nav-header" %></div>
 
 <% else %>
-    <div class="span1 well">
+    <div class="well">
       <span><%= @game.local_player.name %></span>
-      <%= button_to @game.local_player.name+' hit', { :action => "addHit", :idPlayer => @game.local_player.id, :id => @game.id }  %>
-      <%= button_to @game.local_player.name+' miss', { :action => "addMiss", :idPlayer => @game.local_player.id, :id => @game.id } %>
+      <%= button_to @game.local_player.name+' hit', { :action => "addHit", :idPlayer => @game.local_player.id, :id => @game.id }, :class => "btn"  %>
+      <%= button_to @game.local_player.name+' miss', { :action => "addMiss", :idPlayer => @game.local_player.id, :id => @game.id }, :class => "btn" %>
     </div>
 
-    <div class="span1 well">
+    <div class="well">
       <span><%= @game.away_player.name %></span>
-      <%= button_to @game.away_player.name+' hit', { :action => "addHit", :idPlayer => @game.away_player.id, :id => @game.id } %>
-      <%= button_to @game.away_player.name+' miss', { :action => "addMiss", :idPlayer => @game.away_player.id, :id => @game.id } %>
+      <%= button_to @game.away_player.name+' hit', { :action => "addHit", :idPlayer => @game.away_player.id, :id => @game.id }, :class => "btn" %>
+      <%= button_to @game.away_player.name+' miss', { :action => "addMiss", :idPlayer => @game.away_player.id, :id => @game.id }, :class => "btn" %>
     </div>
 
-    <div class="clearfix"></div>
-
-    <%= button_to 'Finish game', { :action => "finish", :id => @game.id } %>
+    <%= button_to 'Finish game', { :action => "finish", :id => @game.id }, :class => "btn" %>
 <% end %>
